# project

./: README.md  asciinema.cast  asciinema_gcd.cast  pyproject.toml
.github/workflows/: ci.yml
brain_games/: engine.py
brain_games/games/: calc.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
project/: .gitignore  Makefile  README.md  asciinema_calc.cast  asciinema_prime.cast  asciinema_progression.cast
project/brain_games/: engine.py
project/brain_games/scripts/: brain_calc.py  brain_even.py  brain_progression.py
